Fix overflow scroll

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,6 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
   margin: 0;
   min-height: calc(100vh);
 }
